add x-agent-id header
