# controller/docs/swagger.json
@@ -33,6 +33,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "agent ID",
+                        "name": "X-Agent-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "ETag value",
                         "name": "If-None-Match",
                         "in": "header"
@@ -47,6 +54,12 @@
                     },
                     "304": {
                         "description": "Not Modified"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpresponse.ErrorResponse"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized",
@@ -153,6 +166,12 @@
                         "name": "X-API-Key",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "existing agent ID for UUID reuse",
+                        "name": "X-Agent-ID",
+                        "in": "header"
                     }
                 ],
                 "responses": {
